--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 <!-- Your code here -->
+<!--this is a basic html file -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="company.css" />
+        <link rel="stylesheet" type="text/css" href="project-x-launch.css" />
+        <link rel="stylesheet" type="text/css" href="typography.css" />
+        <title> cat perry's</title>
+
+    </head>
+    <body>
+
+
+    </body>
+</html>
